--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="icon" href="/favicon2.png" type="image/png">
     <link rel="apple-touch-icon" href="/favicon.png">
 
     <!-- Google Tag Manager -->
