--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon2.png" type="image/png">
     <link rel="apple-touch-icon" href="/favicon.png">
-
-    <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WKJRVDRM');</script>
-<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Fonts: Playfair Display -->
@@ -452,10 +444,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WKJRVDRM"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
 
     <div class="ambient-glow"></div>
     <div class="ambient-glow-2"></div>
@@ -521,7 +509,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             "90s Music": "https://streams.ilovemusic.de/iloveradio24.mp3",
             "00s Music": "https://streams.ilovemusic.de/iloveradio37.mp3",
             "Today's Top Hits": "https://listen.181fm.com/181-power_128k.mp3",
-            "Classical & Instrumental": "https://live.musopen.org:8085/streamvbr0",
+            "Classical & Instrumental": "https://listen.181fm.com/181-classical_128k.mp3",
             "Relax and Spiritual": "https://streams.ilovemusic.de/iloveradio17.mp3",
             "Electronic": "https://streams.ilovemusic.de/iloveradio2.mp3",
             "Música en Español": "https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_MORON.mp3"
