--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
 
         body {
-            background: url('/Users/pelen/.gemini/antigravity/brain/6a3a385f-0c4f-4d6c-97d4-5c549322e563/glass_background_1769967512257.png') no-repeat center center fixed;
+            background: url('background.png') no-repeat center center fixed;
             background-size: cover;
             color: var(--text-color);
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -129,22 +129,6 @@
             /* Subtle light glow for contrast */
             font-weight: 600;
             /* Slightly bolder for impact */
-            animation: floatText 5s ease-in-out infinite;
-        }
-
-        @keyframes floatText {
-
-            0%,
-            100% {
-                transform: translateY(0);
-                opacity: 0.9;
-            }
-
-            50% {
-                transform: translateY(-4px);
-                opacity: 1;
-                text-shadow: 0 4px 8px rgba(255, 255, 255, 0.6);
-            }
         }
 
         /* Grid */
