--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 
         // Stream Map - Reliable Public Streams
         const streamMap = {
-            "70s Music": "https://strm112.1.fm/70s_128", // Dedicated 70s
+            "70s Music": "https://pureplay.cdnstream1.com/6011_128.mp3", // Dedicated 70s
             "80s Music": "https://listen.181fm.com/181-awesome80s_128k.mp3",
             "90s Music": "https://streams.ilovemusic.de/iloveradio24.mp3",
             "00s Music": "https://streams.ilovemusic.de/iloveradio37.mp3",
