--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
         const streamMap = {
             "70s Music": "https://pureplay.cdnstream1.com/6011_128.mp3", // Dedicated 70s
             "80s Music": "https://listen.181fm.com/181-awesome80s_128k.mp3",
-            "90s Music": "https://streams.ilovemusic.de/iloveradio24.mp3",
+            "90s Music": "https://listen.181fm.com/181-star90s_128k.mp3",
             "00s Music": "https://streams.ilovemusic.de/iloveradio37.mp3",
             "Today's Top Hits": "https://listen.181fm.com/181-power_128k.mp3",
             "Classical & Instrumental": "https://listen.181fm.com/181-classical_128k.mp3",
