--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
             "90s Music": "https://listen.181fm.com/181-star90s_128k.mp3",
             "00s Music": "https://listen.181fm.com/181-star2000s_128k.mp3",
             "Today's Top Hits": "https://listen.181fm.com/181-power_128k.mp3",
-            "Classical & Instrumental": "https://listen.181fm.com/181-classical_128k.mp3",
+            "Classical & Instrumental": "https://media-ssl.musicradio.com/ClassicFM",
             "Relax Music": "https://streams.ilovemusic.de/iloveradio17.mp3",
             "Electronic Music": "https://25553.live.streamtheworld.com/OWR_INTERNATIONAL.mp3",
             "Música en Español": "https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_MORON.mp3"
