--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             "70s Music": "https://pureplay.cdnstream1.com/6011_128.mp3", // Dedicated 70s
             "80s Music": "https://listen.181fm.com/181-awesome80s_128k.mp3",
             "90s Music": "https://listen.181fm.com/181-star90s_128k.mp3",
-            "00s Music": "https://listen.181fm.com/181-star2000s_128k.mp3",
+            "00s Music": "https://pureplay.cdnstream1.com/6034_128.mp3",
             "Today's Top Hits": "https://listen.181fm.com/181-power_128k.mp3",
             "Classical & Instrumental": "https://media-ssl.musicradio.com/ClassicFM",
             "Relax Music": "https://pureplay.cdnstream1.com/6016_128.mp3",
