--- a/index.html
+++ b/index.html
@@ -631,7 +631,20 @@
     <!-- Hidden Audio Element -->
     <audio id="audioPlayer"></audio>
 
-   // Stream Map - Reliable Public Streams
+    <script>
+        const categories = [
+            { name: "70s Music", id: "70s Music", sub: "Vintage Vibes & Disco" },
+            { name: "80s Music", id: "80s Music", sub: "Neon Nights & Synth" },
+            { name: "90s Music", id: "90s Music", sub: "Pop Culture & Grunge" },
+            { name: "00s Music", id: "00s Music", sub: "The Y2K Era" },
+            { name: "Today's Top Hits", id: "Today's Top Hits", sub: "Chart Toppers" },
+            { name: "Classical & Instrumental", id: "Classical & Instrumental", sub: "Pure Focus & Calm" },
+            { name: "Relax Music", id: "Relax Music", sub: "Mindfulness & Zen" },
+            { name: "Electronic Music", id: "Electronic Music", sub: "Future Beats & Bass" },
+            { name: "Música en Español", id: "Música en Español", sub: "Ritmo Latino" }
+        ];
+
+      // Stream Map - Reliable Public Streams
         const streamMap = {
             "70s Music": "https://pureplay.cdnstream1.com/6011_128.mp3", // Dedicated 70s
             "80s Music": "https://listen.181fm.com/181-awesome80s_128k.mp3",
@@ -644,19 +657,6 @@
             "Música en Español": "https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_MORON.mp3"
         };
 
-
-        // Stream Map - Reliable Public Streams
-        const streamMap = {
-            "70s Music": "https://strm112.1.fm/70s_128", // Dedicated 70s
-            "80s Music": "https://listen.181fm.com/181-awesome80s_128k.mp3",
-            "90s Music": "https://streams.ilovemusic.de/iloveradio24.mp3",
-            "00s Music": "https://streams.ilovemusic.de/iloveradio37.mp3",
-            "Today's Top Hits": "https://listen.181fm.com/181-power_128k.mp3",
-            "Classical & Instrumental": "https://listen.181fm.com/181-classical_128k.mp3",
-            "Relax Music": "https://streams.ilovemusic.de/iloveradio17.mp3",
-            "Electronic Music": "https://25553.live.streamtheworld.com/OWR_INTERNATIONAL.mp3",
-            "Música en Español": "https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_MORON.mp3"
-        };
 
         const grid = document.getElementById('categoryGrid');
         const playerBar = document.getElementById('playerBar');
